--- a/css/screen.less
+++ b/css/screen.less
@@ -1,4 +1,8 @@
+@import 'less/elements.less';
+
 body {
+    .opacity(1);
+    .bw-gradient();
     background: #fff;
     font-family: 'Roboto', sans-serif
 }
