--- a/css/screen.css
+++ b/css/screen.css
@@ -1,4 +1,22 @@
+/*---------------------------------------------------
+    LESS Elements 0.9
+  ---------------------------------------------------
+    A set of useful LESS mixins
+    More info at: http://lesselements.com
+  ---------------------------------------------------*/
 body {
+  -moz-opacity: 1;
+  -khtml-opacity: 1;
+  -webkit-opacity: 1;
+  opacity: 1;
+  -ms-filter: progid:DXImageTransform.Microsoft.Alpha(opacity=100);
+  filter: alpha(opacity=100);
+  background: #F5F5F5;
+  background: -webkit-gradient(linear, left bottom, left top, color-stop(0, #000000), color-stop(1, #ffffff));
+  background: -ms-linear-gradient(bottom, #000000 0%, #ffffff 100%);
+  background: -moz-linear-gradient(center bottom, #000000 0%, #ffffff 100%);
+  background: -o-linear-gradient(#ffffff, #000000);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffff', endColorstr='#000000', GradientType=0);
   background: #fff;
   font-family: 'Roboto', sans-serif;
 }
