added all fonts

--- a/css/screen.less
+++ b/css/screen.less
@@ -1,8 +1,7 @@
+@import 'fonts.css';
 @import 'less/elements.less';
 
 body {
-    .opacity(1);
-    .bw-gradient();
     background: #fff;
-    font-family: 'Roboto', sans-serif
+    font-family: 'Open Sans', sans-serif;
 }
