--- a/css/screen.less
+++ b/css/screen.less
@@ -5,3 +5,19 @@ body {
     background: #fff;
     font-family: 'Open Sans', sans-serif;
 }
+
+.container {
+  max-width: 500px;
+  margin: 0 auto;
+}
+
+section {
+  height: 200px;
+  text-align: center;
+  &:nth-child(even) {
+    background: gray;
+  }
+}
+
+@import 'less/section-contact-us.less';
+
