--- a/css/screen.css
+++ b/css/screen.css
@@ -9,3 +9,17 @@ body {
   background: #fff;
   font-family: 'Open Sans', sans-serif;
 }
+.container {
+  max-width: 500px;
+  margin: 0 auto;
+}
+section {
+  height: 200px;
+  text-align: center;
+}
+section:nth-child(even) {
+  background: gray;
+}
+.section-contact-us {
+  background: red !important;
+}
